# Warden

./: CMakeLists.txt  README.md  resources.qrc
Source/: config.h  main.cpp
Source/Core/: PackageManager.cpp  PackageManager.h
Source/Core/Folder/: Folder.cpp  Folder.h  FoldersManager.cpp  FoldersManager.h
Source/Core/Package/: InstalledPackage.cpp  InstalledPackage.h  Package.cpp  Package.h
Source/Core/Utils/: CoreUtils.cpp  CoreUtils.h  DBusClient.cpp  DBusClient.h
Source/Pacman/: InstalledPacmanPackage.cpp  InstalledPacmanPackage.h  PacmanHelper.cpp  PacmanHelper.h  PacmanPackage.cpp  PacmanPackage.h  RepositoryPacmanPackage.cpp  RepositoryPacmanPackage.h
Source/UI/: MainWindow.cpp  MainWindow.h  style.qss
Source/UI/InstalledPage/: FolderWidget.cpp  FolderWidget.h  PackageItemRow.cpp  PackageItemRow.h  SidePanelWidget.cpp  SidePanelWidget.h  TableWidget.cpp  TableWidget.h
